--- a/env.example
+++ b/env.example
@@ -1,1 +1,17 @@
-PG_DB_PORT=8001
+NODE_ENV=development
+
+## drop schema: boolean
+DROP_SCHEMA=true
+
+## run migrations: boolean
+RUN_MIGRATIONS=true
+
+## run seed
+RUN_SEEDS=true 
+
+API_PORT=8001
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
