--- a/apps/task-management/tsconfig.spec.json
+++ b/apps/task-management/tsconfig.spec.json
@@ -7,11 +7,5 @@
     "types": ["jest", "node"],
     "moduleResolution": "node10"
   },
-  "files": ["src/test-setup.ts"],
-  "include": [
-    "jest.config.ts",
-    "src/**/*.test.ts",
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+  "include": ["jest.config.ts", "src/**/*.suite.ts", "src/**/*.ts"]
 }
