--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,14 +2,16 @@ version: '3.8'
 services:
   db:
     image: postgres:16
-    container_name: demo-postgres
+    container_name: demo
     restart: always
+    env_file:
+      - ../.env
     environment:
-      POSTGRES_USER: tm_user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: tm-db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
