--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "prefix": "app",
-  "sourceRoot": "apps/dashboard/src",
+  "sourceRoot": "apps/dashboard",
   "tags": [],
   "targets": {
     "build": {
@@ -11,15 +11,11 @@
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/dashboard",
-        "index": "apps/dashboard/src/index.html",
-        "browser": "apps/dashboard/src/main.ts",
+        "index": "apps/dashboard/index.html",
+        "browser": "apps/dashboard/main.ts",
         "polyfills": ["zone.js"],
         "tsConfig": "apps/dashboard/tsconfig.app.json",
-        "assets": [
-          "apps/dashboard/src/favicon.ico",
-          "apps/dashboard/src/assets"
-        ],
-        "styles": ["apps/dashboard/src/styles.css"],
+        "styles": ["apps/dashboard/app.css"],
         "scripts": []
       },
       "configurations": {
