--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -16,7 +16,10 @@
     "@angular/platform-browser": "~20.3.0",
     "@angular/platform-browser-dynamic": "~20.3.0",
     "@angular/router": "~20.3.0",
+    "@tailwindcss/postcss": "^4.1.17",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -28,7 +31,7 @@
     "@angular/compiler-cli": "~20.3.0",
     "@angular/language-service": "~20.3.0",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^18.19.130",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
