Create login log out logic, Update pages styling, added top bar component, refine guards and filters

--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -4,7 +4,7 @@
     "outDir": "../../dist/out-tsc",
     "types": ["node", "jest"]
   },
-  "include": ["**/*.ts", "../../libs/auth/guard/user-enabled.guard.ts"],
+  "include": ["**/*.ts", "guard/user-enabled.guard.ts", "modules/auth-impt"],
   "files": ["main.ts"],
   "exclude": [
     "jest.config.ts",
