--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start:dashboard": "npm run config:env && npx nx serve dashboard",
     "postinstall": "nx reset",
     "install-all": "npm i && cd apps/api && npm i && cd apps/dashboard && npm i && cd ../../",
-    "setup": "docker compose --env-file .env -f apps/api/database/docker/docker-compose.yml up -d",
-    "setdown": "docker compose --env-file .env -f apps/api/database/docker/docker-compose.yml down",
+    "api:db:setup": "docker compose --env-file .env -f apps/api/database/docker/docker-compose.yml up -d",
+    "api:db:setdown": "docker compose --env-file .env -f apps/api/database/docker/docker-compose.yml down",
     "typeorm": "ts-node --project apps/api/database/docker/tsconfig.typeorm.json node_modules/typeorm/cli.js -d apps/api/database/docker/ormconfig.ts",
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
