--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,9 +16,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "src/libs/*": ["libs/*"],
-      "@task-management/data": ["libs/data/index.ts"],
-      "@task-management/auth": ["libs/auth/index.ts"]
+      "@libs/data/*": ["libs/data/*"],
+      "@libs/auth/*": ["libs/auth/*"],
+      "@api/*": ["apps/api/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
