--- a/apps/api/database/docker/tsconfig.typeorm.json
+++ b/apps/api/database/docker/tsconfig.typeorm.json
@@ -3,15 +3,18 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2019",
-    "baseUrl": ".",
     "types": ["node"],
+
+    "baseUrl": ".",
     "paths": {
-      "src/*": ["apps/api/*"]
+      "@libs/data/*": ["../../../../libs/data/*"],
+      "@api/*": ["../../*"]
     },
+
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
     "esModuleInterop": true
   },
-  "include": ["apps/api/**/*.ts", ".ormconfig.ts"]
+  "include": ["../../**/*.ts", ".ormconfig.ts"]
 }
