fixed some bugs and update env example

--- a/env.example
+++ b/env.example
@@ -1,17 +1,32 @@
 NODE_ENV=development
 
 ## drop schema: boolean
-DROP_SCHEMA=true
-
+DROP_SCHEMA=false
 ## run migrations: boolean
 RUN_MIGRATIONS=true
-
-## run seed
-RUN_SEEDS=true 
+## run seed: boolean 
+RUN_SEEDS=false 
 
 API_PORT=8001
-DB_HOST=localhost
+API_HOST=localhost
+API_PROTOCOL=http
+
 DB_PORT=5432
+DB_HOST=localhost
+
+# default db for demo purpose
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
+
+# Anything, cannot be undefined
+JWT_SECRET=
+
+# Login token expiry in seconds
+TOKEN_LIFE_SECONDS=3600
+
+## Users for testing:
+## username ( user1, user2, user3 )  --> Password!!
+## user1's permission --> owner in parent org, admin in child org 
+## user2's permission --> admin in parent org, owner in child org 
+## user3's permission --> viewer in parent org, no role in child org 
