--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,5 +20,8 @@
       "@api/*": ["apps/api/*"]
     }
   },
+  "angularCompilerOptions": {
+    "strictTemplates": true
+  },
   "exclude": ["node_modules", "tmp"]
 }
