Creating testing cases and adding missing services and routes

--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -8,8 +8,7 @@
   "files": ["main.ts"],
   "exclude": [
     "jest.config.ts",
-    "**/*.suite.ts",
-    "**/*.e2e-spec.ts",
-    "test-e2e/**/*"
+    "**/*.e2e-spec.ts"
+    // "**/*.suite.ts",
   ]
 }
