--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "faker": "^6.6.6",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -26,6 +27,7 @@
     "typeorm-transactional": "^0.5.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.1.9",
     "@types/bcrypt": "^6.0.0",
