--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "nestjs-cls": "^6.1.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.1.14",
     "rxjs": "~7.8.0",
